RESOLVED FIXED38657
[GTK] Adjustment resetting uses wrong values, and misses page_size and steps
https://bugs.webkit.org/show_bug.cgi?id=38657
Summary [GTK] Adjustment resetting uses wrong values, and misses page_size and steps
Gustavo Noronha (kov)
Reported 2010-05-06 10:27:46 PDT
That's about it. The reason we sometimes end up with a horizontal scrollbar when going back to a page is because upper is currently being confused with page_size. To clean it up, I wanted to use API instead of poking into the struct internals and emitting signals ourselves, so I am also setting the steps.
Attachments
fix adjustment resetting (3.36 KB, patch)
2010-05-06 10:30 PDT, Gustavo Noronha (kov)
xan.lopez: review+
gustavo: commit-queue-
Gustavo Noronha (kov)
Comment 1 2010-05-06 10:30:54 PDT
Created attachment 55256 [details] fix adjustment resetting
Xan Lopez
Comment 2 2010-05-06 10:34:27 PDT
Comment on attachment 55256 [details] fix adjustment resetting Go go gadget review!
Gustavo Noronha (kov)
Comment 3 2010-05-06 11:46:43 PDT
Landed as 58897 with follow up fix as r58898.
Note You need to log in before you can comment on or make changes to this bug.