2010-05-06  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Xan Lopez.

        [GTK] Adjustment resetting uses wrong values, and misses page_size and steps
        https://bugs.webkit.org/show_bug.cgi?id=38657

        Fix resetting adjustment values. In the page cache case, we were
        confusing page_size and upper, leading to stray scrollbars
        sometimes.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::setGtkAdjustments):

Canonical link: https://commits.webkit.org/50144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58897 268f45cc-cd09-0410-ab3c-d52691b4dbfc